<resources>
    <string name="app_name">FMR</string>
    <string name="lbl_enter_search_term">Enter a search term</string>
    <string name="btn_add">Submit Report</string>
    <string name="button_back">Back</string>
    <string name="lbl_item_edit_text_hint">Enter a title</string>
    <string name="lbl_number_edit_text_hint">Enter a building/location</string>
    <string name="lbl_des_edit_text_hint">Enter a description</string>
    <string name="err_no_item_value_entered">Please enter a title value</string>
    <string name="err_no_number_value_entered">Please enter a building/location value</string>
    <string name="err_no_des_value_entered">Please enter a description value</string>
    <string name="err_no_search_term_entered">Please enter a search string</string>
    <string name="msg_record_added">Report added</string>
    <string name="msg_no_results_found">Sorry, no reports found</string>
    <string name="msg_single_result_found">%1$d current report</string>
    <string name="msg_multiple_results_found">%1$d current reports</string>
    <string name="title_feedpage">Reports Feed</string>
    <string name="title_reportpage">Create a Report</string>
    <string name="view_reports">View Reports</string>
    <string name="button_start">Create a Report</string>
    <string name="button_report">Submit</string>
    <string name="title_signinpage">"Sign In "</string>
    <string name="credentials">Please enter UNB email and password</string>
    <string name="btn_camera">Click to Add Photo</string>
    <string name="err_no_photo_entered">Please take photo</string>
    <string-array name="location">
        <item>Harriet Irving Library</item>
        <item>Head Hall</item>
        <item>Student Union Building</item>
        <item>Bailey Hall</item>
        <item>Gillin Hall</item>
        <item>Tilley Hall</item>
        <item>Carleton Hall</item>
        <item>Toole Hall</item>
        <item>Law Building</item>
        <item>Lady Beaverbrook Gym</item>
        <item>MacLaggan Hall</item>
        <item>Marshall d'Avray Hall</item>

    </string-array>
</resources>
