<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#FF000000"
    tools:context="mobiledev.unb.ca.roompersistencelab.ReportPage">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/item_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:hint="@string/lbl_item_edit_text_hint"
            android:backgroundTint="@android:color/white"
            android:textColorHint="@color/white"
            android:textColor="#ffff"
            android:inputType="textCapSentences|textImeMultiLine"
            >

        </EditText>

        <AutoCompleteTextView
            android:id="@+id/number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_edit_text"
            android:layout_marginTop="0dp"
            android:hint="@string/lbl_number_edit_text_hint"
            android:backgroundTint="@android:color/white"
            android:textColorHint="@color/white"
            android:textColor="#ffff"
            android:inputType="textCapSentences|textMultiLine">

        </AutoCompleteTextView>

        <EditText
            android:id="@+id/des_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_edit_text"
            android:layout_marginTop="0dp"
            android:hint="@string/lbl_des_edit_text_hint"
            android:backgroundTint="@android:color/white"
            android:textColorHint="@color/white"
            android:textColor="#ffff"
            android:inputType="textCapSentences|textMultiLine"></EditText>

    </RelativeLayout>

    <ImageView
        android:id="@+id/photoReport_imageview"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/camera_button"
        android:textColor="@color/red"
        android:backgroundTint="@color/white"
        android:text="@string/btn_camera"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_add"
        android:textColor="@color/red" />

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/results_text_view"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="" />

    <ListView
        android:layout_width="match_parent"
        android:id="@+id/listview"
        android:layout_height="match_parent" /> -->
</LinearLayout>
